# coxinha

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: lessons.md  roadmap.md  status.md
docs/architecture/: conventions.md  debugged-helper.md  meeting-pipeline.md  overview.md  vault-schema.md
docs/architecture/decisions/: 0001-tauri.md  0002-local-first.md  0003-blocknote.md  0004-pure-rust.md  0005-genai-llm.md  0006-cargo-workspace.md  0007-tray-resident.md  0008-stt-trait.md  0009-diarization-trait.md  0010-onnx-runtime.md  0011-diagram-blocks-f15.md  0012-i18n.md  0013-a11y-baseline.md  0014-audio-toolkit-from-handy.md  0015-layered-knowledge-memory.md  0016-client-shell-url-addressable.md  0017-workspaces-and-resource-taxonomy.md  README.md
docs/reports/: 2026-04-18-f1-notes-vad-obsidian.html  2026-04-19-appearance-theme.html  2026-04-19-clippy-in-ci.html  2026-04-19-drop-lint-script.html  2026-04-19-rebuild-from-vault.html  2026-04-19-shortcuts-readonly.html  2026-04-19-tags-filter.html  2026-04-19-wiki-links.html  2026-04-20-new-note-latency.html  README.md
docs/research/: granola-flow-inventory.md  notion-flow-inventory.md  obsidian-flow-inventory.md  opera-ux-inventory.md  shortcut-map.md  type-model-benchmark.md  ui-audit.md
docs/research/ui-audit/: DESIGN.md  screen-inventory.md  shortcut-atlas.md  spec-review-0043-0050.md
docs/research/ui-audit/mockups/: README.md  coxinha.pen  route-map.md
docs/research/ui-audit/screenshots/: README.md
docs/specs/: 0001-build-baseline.md  0001-notes.md  0002-daily-notes.md  0002-testing-baseline.md  0003-cold-start-load.md  0003-tray-resident.md  0004-db-migrations.md  0004-global-shortcuts.md  0005-call-detection.md  0005-notes-and-search.md  0006-app-shell.md  0006-recording.md  0007-recording-and-call-detection.md  0007-transcription.md  0008-diarization.md  0008-meeting-pipeline.md  0009-meetings-list.md  0009-summarization.md  0010-search-fts.md  0010-settings-view.md  0011-mermaid-block.md  0012-excalidraw-block.md  0013-wiki-links.md  0014-tags-filter.md  0015-sync-backend.md  0015-vault-import.md  0016-backup-and-export.md  0016-sync-client.md  0017-crdt-conflict.md  0017-installer-onboarding.md  0018-external-edit-conflicts.md  0018-web-read-ui.md  0019-auth.md  0019-sync-backend.md  0020-oauth-microsoft.md  0020-sync-client.md  0021-crdt-conflict.md  0021-oauth-google.md  0022-tasks-sync.md  0022-web-read-ui.md  (+55 more)
scripts/: download-models.sh  generate-icons.ps1  setup-wsl.md
shared/: Cargo.toml
shared/src/: lib.rs
src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/locales/: en.yml
src-tauri/src/: call_detector.rs  config.rs  db.rs  events.rs  lib.rs  main.rs  obsidian.rs  recorder.rs  shortcuts.rs  storage.rs  summarizer.rs  tray.rs  window.rs
src-tauri/src/audio_toolkit/: mod.rs
src-tauri/src/audio_toolkit/vad/: mod.rs  silero.rs  smoothed.rs
src-tauri/src/diarizer/: mod.rs  none.rs  pyannote.rs
src-tauri/src/transcriber/: mod.rs  parakeet.rs  whisper.rs
src-tauri/tests/: boot_smoke.rs  perf_new_note.rs  perf_smoke.rs  shortcut_smoke.rs
src/components/: AgendaView.tsx  BacklinksPanel.test.tsx  BacklinksPanel.tsx  ChromeBar.test.tsx  ChromeBar.tsx  IconRail.tsx  NoteEditor.tsx  RouteLayout.tsx  SettingsView.test.tsx  SettingsView.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.tsx
src/components/AppShell/: AppShell.tsx  Breadcrumb.test.tsx  Breadcrumb.tsx  ChromeCap.tsx  ChromeTabs.tsx  Rail.tsx  RailItem.tsx  RailSection.tsx  SavedIndicator.tsx  SidePanel.test.tsx  SidePanel.tsx  index.ts
src/features/agenda/: AgendaPanel.tsx  AgendaView.tsx  fixtures.ts
src/features/home/: HomeCanvas.test.tsx  HomeCanvas.tsx  HomePanel.tsx  fixtures.ts
src/features/meetings/: MeetingBlock.tsx  MeetingCard.test.tsx  MeetingCard.tsx  MeetingsView.tsx  fixtures.ts  slashCommand.ts
src/features/notes/: BacklinksPanel.test.tsx  BacklinksPanel.tsx  NoteActionsMenu.test.tsx  NoteActionsMenu.tsx  NoteEditor.tsx  NoteHeader.test.tsx  NoteHeader.tsx  editorFocus.test.ts  editorFocus.ts
src/features/settings/: SettingsView.test.tsx  SettingsView.tsx
src/features/shell/: AiPanel.tsx  CommandPalette.test.tsx  CommandPalette.tsx
src/lib/: bindings.ts  i18n.ts  notes.test.ts  notes.ts  panels.ts  perf.ts  store.ts  theme.test.ts  theme.ts  useTheme.ts
src/locales/: en.json  en.test.ts
src/routes/: AgendaRoute.tsx  DevMenuPreviewRoute.tsx  DevShellPreviewRoute.tsx  HomeRoute.tsx  MeetingsRoute.tsx  NoteDetailRoute.tsx  NotesIndexRoute.tsx  SettingsRoute.tsx  __root.tsx
tools/: capture-screenshots.mjs
