[workspace]
resolver = "2"
members = ["src-tauri", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rodolfo <you@example.com>"]
license = "MIT"
repository = "https://github.com/rodolfo/coxinha"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

# Release profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Faster incremental dev builds
[profile.dev]
opt-level = 0
debug = 1
incremental = true
