[package]
name = "coxinha"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "coxinha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared types
shared = { path = "../shared" }

# Tauri core + plugins
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Typed IPC (generates TS from Rust)
specta = { version = "2.0.0-rc", features = ["derive", "chrono", "uuid"] }
# Pinning 0.0.9: 0.0.11 moves `BigIntExportBehavior` out of the
# crate root; worth updating the export call if we ever bump.
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }

# Shared workspace
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait = "0.1"

# DB
rusqlite = { version = "0.39", features = ["bundled", "backup", "chrono"] }

# Audio
cpal = "0.17"
hound = "3.5"

# Voice activity detection (Silero ONNX). Ported from Handy per
# ADR-0014. `download-binaries` grabs the ONNX Runtime shared
# library at build time so Windows doesn't need libclang or a
# system install.
# Pinning rc.10: rc.12's download-binaries build script fails on
# a `ureq 3.x` API mismatch (`tls_config` method missing). Revisit
# when a fixed RC or 2.0 stable ships.
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
] }
# ndarray stays at 0.16 because ort rc.10 forces it (they haven't
# bumped to 0.17 on the RC line). Cargo resolution will complain
# if we mismatch.
ndarray = "0.16"

# STT — features gate the crates
whisper-rs = { version = "0.16", default-features = false, optional = true }
transcribe-rs = { version = "0.3", features = ["onnx"], optional = true }

# Diarization
pyannote-rs = { version = "0.3", optional = true }
# speakrs = { version = "0.1", optional = true }  # uncomment when ready

# Unified LLM client
genai = "0.5"

# HTTP + config
reqwest = { version = "0.13", features = ["json", "stream"] }
toml = "1"
directories = "6"

# Filesystem watcher (detect external vault edits)
notify = "8"

# Image processing (WebP compression on paste)
image = { version = "0.25", features = ["webp", "png", "jpeg"] }

# i18n (tray menu strings etc.)
rust-i18n = "4"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
# Lightweight process inspection for perf smoke (RSS + CPU sampling).
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
# Call detection + process-specific loopback
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
wasapi = "0.18"

[features]
# Default: no STT. Keeps dev builds fast and avoids the libclang
# system dependency that `whisper-rs-sys` needs at compile time.
# Release builds use `full-release` below to pull real engines in.
default = []

# STT engines (one or more)
stt-whisper = ["dep:whisper-rs"]
stt-parakeet = ["dep:transcribe-rs"]

# GPU acceleration (each engine picks what it needs)
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]

# Diarization engines
diarize-pyannote = ["dep:pyannote-rs"]
# diarize-speakrs = ["dep:speakrs"]

# Full release bundle (used by GitHub Actions)
full-release = [
    "stt-whisper",
    "stt-parakeet",
    "cuda",
    "diarize-pyannote",
]
